--- a/Frontend/css/inicio.css
+++ b/Frontend/css/inicio.css
@@ -564,6 +564,42 @@ section {
 .subscribe-btn:hover {
   text-decoration: underline;
 }
+.modal {
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+  background-color: transparent; /* Fondo transparente para que se vea el del contenedor */
+  margin: 5% auto;
+  padding: 20px;
+  width: 90%;
+  max-width: 1400px;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 1001;
+}
+
+.close:hover {
+  color: #ff3d00;
+}
+
 /* ======================================================
    FOOTER
 ====================================================== */
