--- a/Frontend/template/logininiciodesesion.html
+++ b/Frontend/template/logininiciodesesion.html
@@ -67,7 +67,7 @@
       </button>
 
       <div class="signup-link">
-        Acceso restringido •<a href="../template/loginadmin.html">Personal autorizado</a>
+        Acceso restringido •<a href="Frontend/template/loginadmin.html">Personal autorizado</a>
       </div>
 
   
@@ -99,15 +99,15 @@ document.querySelectorAll("a").forEach(link => {
 
 </script>
 
-<script src="../js/logininiciodesesion.js"></script>
+<script src="Frontend/js/logininiciodesesion.js"></script>
 
 <!-- Supabase CDN -->
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
 <!-- Configuración Supabase -->
-<script src="js/supabase.js"></script>
+<script src="Frontend/js/supabase.js"></script>
 
 <!-- Tu lógica -->
-<script src="js/login.js"></script>
+<script src="Frontendjs/login.js"></script>
 </body>
 </html>
